style: CSS tweaks to prevent bars going off screen

--- a/src/components/DashboardContainer/DashboardContainer.css
+++ b/src/components/DashboardContainer/DashboardContainer.css
@@ -20,17 +20,15 @@
 /**
  * Pane Content
  */
-.dashboardContentBanner {
-  height: 100%;
-  outline: 0;
+
+.dashboardBannerContainer {
   padding: var(--gutter-static);
-  position: relative
 }
+
 .dashboardContent {
   height: 100%;
   overflow-y: scroll;
   overflow: auto;
   outline: 0;
-  padding: var(--gutter-static);
   position: relative
 }
